
enum VehicleType {
    TwoWheeler,
    FourWheeler
}

public class Vehicle {
    public VehicleType getVehicle_type() {
        return vehicle_type;
    }

    public void setVehicle_type(VehicleType vehicle_type) {
        this.vehicle_type = vehicle_type;
    }

    VehicleType vehicle_type;

    public int getVehicle_number() {
        return vehicle_number;
    }

    public void setVehicle_number(int vehicle_number) {
        this.vehicle_number = vehicle_number;
    }

    int vehicle_number;
}
